--- a/crypto-b/templates/login.html
+++ b/crypto-b/templates/login.html
@@ -54,7 +54,7 @@
         <div class="page-footer__column">
           <b>Account</b>
           <ul>
-            <li><a href="#">Log In</a></li>
+            <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
             <li><a href="#">Sign Up</a></li>
           </ul>
         </div>
