--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -66,7 +66,7 @@
       <div class="title  title--down">
         <h1>Trade with MultiplyMarket</h1>
         <p class="title__sub">MultiplyMarket presents its users with the optimal platform for investing in Forex, Futures and Commodities.<br>We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
-        <a href="register.html" class="button  button--title">Open account</a>
+        <a class="button  button--title" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
       </div>
     </div>
   </section>
@@ -132,8 +132,8 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a href="#">Log In</a></li>
-          <li><a href="register.html">Sign Up</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/register/real">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
