--- a/mm/templates/login.html
+++ b/mm/templates/login.html
@@ -94,7 +94,7 @@
         <ul>
           <b>Account</b>
           <li><a class="footer__active">Log In</a></li>
-          <li><a href="register.html">Sign Up</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/register/real">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
