--- a/mm/templates/mobile.html
+++ b/mm/templates/mobile.html
@@ -101,7 +101,7 @@
             </ul>
           </div>
         </div>
-        <a class="button  button--title" href="register.html">Open account</a>
+        <a class="button  button--title" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
       </div>
     </div>
   </section>
@@ -125,8 +125,8 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a href="#">Log In</a></li>
-          <li><a href="register.html">Sign Up</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/register/real">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
