--- a/mm/templates/register.html
+++ b/mm/templates/register.html
@@ -410,7 +410,7 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a href="#">Log In</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
           <li><a class="footer__active">Sign Up</a></li>
         </ul>
         <ul>
