--- a/mm/templates/account-types.html
+++ b/mm/templates/account-types.html
@@ -74,19 +74,19 @@
             <b>Mini</b>
             <p>Basic Exchange For Beginners</p><br>
             <span>$500</span>
-            <a class="button  button--table" href="register.html">Open account</a>
+            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
           </th>
           <th>
             <b>Classic</b>
             <p>For Skilled Investors</p><br>
             <span>$5000</span>
-            <a class="button  button--table" href="register.html">Open account</a>
+            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
           </th>
           <th>
             <b>Premium</b>
             <p>Advanced Transaction<br>For Experienced Investors</p>
             <span>$20000</span>
-            <a class="button  button--table" href="register.html">Open account</a>
+            <a class="button  button--table" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
           </th>
         </tr>
         <tr>
@@ -193,8 +193,8 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a href="#">Log In</a></li>
-          <li><a href="register.html">Sign Up</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/register/real">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
