--- a/mm/templates/platform.html
+++ b/mm/templates/platform.html
@@ -84,7 +84,7 @@
         </div>
         <div class="platform__left">
           <img src="../img/meta.png" alt="MetaTrader4">
-          <a class="button  button--download" href="#">Download</a>
+          <a class="button  button--download" href="https://client.multiplymarket.com/en/members/register/real">Download</a>
         </div>
       </div>
     </div>
@@ -130,8 +130,8 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a href="#">Log In</a></li>
-          <li><a href="register.html">Sign Up</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/register/real">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
