--- a/mm/templates/segregated.html
+++ b/mm/templates/segregated.html
@@ -87,7 +87,7 @@
             <li>May be automatically settled for a money withdraw Performed on user’s requests of transmitting</li>
           </ul>
         </div>
-        <a class="button  button--title" href="register.html">Open account</a>
+        <a class="button  button--title" href="https://client.multiplymarket.com/en/members/register/real">Open account</a>
       </div>
     </div>
   </section>
@@ -111,8 +111,8 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a href="#">Log In</a></li>
-          <li><a href="register.html">Sign Up</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/register/real">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
