--- a/mm/templates/signals.html
+++ b/mm/templates/signals.html
@@ -68,7 +68,7 @@
         <p class="title__sub">At MultiplyMarket we provide the best forex signals by working closely with technology providers who are at the forefront of the industry.<br>To get a different perspective on Commodities, Indices, Currency Pairs, and Stocks, you can change the Time Frame.</p>
       </div>
       <div class="content">
-        <a class="button  button--title" href=http://www.mlc-forex-news.com"">HOT Signals</a>
+        <a class="button  button--title" href="http://www.mlc-forex-news.com/" target="_blank">HOT Signals</a>
       </div>
     </div>
   </section>
@@ -92,8 +92,8 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a href="#">Log In</a></li>
-          <li><a href="register.html">Sign Up</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/register/real">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
