--- a/mm/templates/web.html
+++ b/mm/templates/web.html
@@ -80,7 +80,7 @@
               <li>Make informed trading decisions based on technical stats.</li>
               <li>Have access from any internet connectible device.</li>
             </ul>
-            <a class="button  button--title" href="#">Go to web trader</a>
+            <a class="button  button--title" href="https://webtrader.multiplymarket.com/">Go to web trader</a>
           </div>
           <div class="trader__right">
             <img src="../img/web.png" alt=""><br>
@@ -123,8 +123,8 @@
       <div class="footer__flex">
         <ul>
           <b>Account</b>
-          <li><a href="#">Log In</a></li>
-          <li><a href="register.html">Sign Up</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/login">Log In</a></li>
+          <li><a href="https://client.multiplymarket.com/en/members/register/real">Sign Up</a></li>
         </ul>
         <ul>
           <b>About Us</b>
