--- a/mm/templates/platform.html
+++ b/mm/templates/platform.html
@@ -84,7 +84,7 @@
         </div>
         <div class="platform__left">
           <img src="../img/meta.png" alt="MetaTrader4">
-          <a class="button  button--download" href="https://client.multiplymarket.com/en/members/register/real">Download</a>
+          <a class="button  button--download" href="../img/tradingtechnologies4setup.zip">Download</a>
         </div>
       </div>
     </div>
