--- a/mm/templates/segregated.html
+++ b/mm/templates/segregated.html
@@ -41,7 +41,7 @@
                 <li><a href="about-us.html">Trade with<br>MultiplyMarket</a></li>
                 <li><a href="account-types.html">Account types</a></li>
                 <li><a>Segregated account</a></li>
-                <li><a href="register.html">Open live account</a></li>
+                <li><a href="https://client.multiplymarket.com/en/members/register/real">Open live account</a></li>
             </ul>
           </li>
           <li>
