--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -230,6 +230,7 @@ body {
     padding: 12px 60px;
     font-size: 25px;
     font-family: 'SF UI Display Black', sans-serif;
+    text-align: center;
     border-radius: 50px; }
   .button--green {
     padding: 8px 60px;
