--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -26,6 +26,7 @@
     padding: 12px 60px;
     font-size: 25px;
     font-family: 'SF UI Display Black', sans-serif;
+    text-align: center;
     border-radius: 50px;
   }
   
