--- a/tgi/sass/style.scss
+++ b/tgi/sass/style.scss
@@ -1,6 +1,12 @@
+@import 'variables';
+
 @import 'global/base';
 @import 'global/fonts';
 
 @import 'blocks/container';
 @import 'blocks/title';
 @import 'blocks/header';
+@import 'blocks/main-nav';
+@import 'blocks/button';
+@import 'blocks/edge';
+@import 'blocks/slider';
