--- a/tgi/sass/blocks/container.scss
+++ b/tgi/sass/blocks/container.scss
@@ -1,7 +1,11 @@
 .container {
   margin: auto;
-}
-
-.container--title {
-  width: 1245px;
+  
+  &--title {
+    width: 1245px;
+  }
+  
+  &--edge {
+    width: 1200px;
+  }
 }
