--- a/tgi/sass/style.scss
+++ b/tgi/sass/style.scss
@@ -10,3 +10,6 @@
 @import 'blocks/button';
 @import 'blocks/edge';
 @import 'blocks/slider';
+@import 'blocks/map';
+@import 'blocks/contact';
+@import 'blocks/form';
