--- a/tgi/sass/blocks/contact.scss
+++ b/tgi/sass/blocks/contact.scss
@@ -1,3 +1,24 @@
 .contact {
-  background: url('../img/contact-bg.png');
+  margin-top: -130px;
+  padding-bottom: 180px;
+  background: url('../img/contact-bg.png') no-repeat top;
+  background-size: cover;
+}
+
+.contact__title {
+  width: 910px;
+  margin-top: 120px;
+  margin-bottom: 80px;
+  padding: 51px;
+  color: #fff;
+  font-size: 48px;
+  font-weight: 300;
+  font-family: 'Open Sans Light', sans-serif;
+  text-transform: uppercase;
+  background: url('../img/border.png') no-repeat;
+  background-size: cover;
+  
+  span {
+    font-family: 'Open Sans SemiBold', sans-serif;
+  }
 }
