--- a/tgi/sass/blocks/map.scss
+++ b/tgi/sass/blocks/map.scss
@@ -18,5 +18,6 @@
   width: 1458px;
   height: 778px;
   margin: auto;
-  background: url('../img/map.png');
+  padding-bottom: 290px;
+  background: url('../img/map.png')no-repeat top;
 }
