--- a/tgi/css/style.css
+++ b/tgi/css/style.css
@@ -2,6 +2,10 @@ body {
   min-width: 320px;
   margin: 0; }
 
+.container {
+  width: 1245px;
+  margin: auto; }
+
 /* open-sans-300 - cyrillic */
 @font-face {
   font-family: 'Open Sans';
@@ -82,13 +86,6 @@ body {
   src: local("Open Sans ExtraBold Italic"), local("OpenSans-ExtraBoldItalic"), url("../fonts/open-sans-v15-cyrillic-800italic.woff2") format("woff2"), url("../fonts/open-sans-v15-cyrillic-800italic.woff") format("woff");
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
 
-.container {
-  margin: auto; }
-  .container--title {
-    width: 1245px; }
-  .container--edge {
-    width: 1200px; }
-
 .title {
   background: url("../img/title-bg.png") no-repeat top; }
 
@@ -161,9 +158,14 @@ body {
     .button--partner:hover {
       background: #00c5ff url("../img/button-partner.png") no-repeat 15px 10px; }
     .button--partner-contact {
+      position: relative;
+      margin-right: 0;
       padding-right: 50px;
       padding-left: 110px;
-      background: url("../img/button-partner.png") no-repeat 60px 10px; }
+      background: url("../img/button-partner.png") no-repeat 60px 10px;
+      z-index: 2; }
+      .button--partner-contact:hover {
+        background: #00c5ff url("../img/button-partner.png") no-repeat 60px 10px; }
   .button--broker {
     padding-left: 70px;
     background: url("../img/button-broker.png") no-repeat 10px;
@@ -172,9 +174,12 @@ body {
     .button--broker:hover {
       background: #00c5ff url("../img/button-broker.png") no-repeat 10px; }
     .button--broker-contact {
+      margin-right: 30px;
       padding-right: 50px;
       padding-left: 110px;
       background: url("../img/button-broker.png") no-repeat 50px 8px; }
+      .button--broker-contact:hover {
+        background: #00c5ff url("../img/button-broker.png") no-repeat 50px 8px; }
 
 .edge {
   background: url("../img/edge-bg.png"); }
@@ -248,13 +253,13 @@ body {
 
 .contact {
   margin-top: -130px;
-  padding-bottom: 180px;
+  padding-bottom: 280px;
   background: url("../img/contact-bg.png") no-repeat top;
   background-size: cover; }
 
 .contact__title {
   width: 910px;
-  margin-top: 120px;
+  margin-top: 70px;
   margin-bottom: 80px;
   padding: 51px;
   color: #fff;
@@ -351,3 +356,29 @@ textarea {
     color: #1c4169; }
   textarea::placeholder {
     color: #1c4169; }
+
+.footer {
+  position: relative;
+  margin-top: -97px;
+  background: url("../img/footer-bg.png") no-repeat top; }
+  .footer img {
+    padding-top: 80px; }
+  .footer p {
+    position: relative;
+    margin-bottom: 0;
+    padding-bottom: 100px;
+    width: 1000px;
+    color: #737373;
+    font-size: 14px;
+    font-family: 'Open Sans Light', sans-serif;
+    z-index: 2; }
+  .footer::before {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    right: 0;
+    width: 836px;
+    height: 610px;
+    background: url("../img/footer-mockup.png") no-repeat;
+    background-size: contain;
+    z-index: 1; }
