--- a/tgi/sass/style.scss
+++ b/tgi/sass/style.scss
@@ -3,7 +3,6 @@
 @import 'global/base';
 @import 'global/fonts';
 
-@import 'blocks/container';
 @import 'blocks/title';
 @import 'blocks/header';
 @import 'blocks/main-nav';
@@ -13,3 +12,4 @@
 @import 'blocks/map';
 @import 'blocks/contact';
 @import 'blocks/form';
+@import 'blocks/footer';
