--- a/tgi/css/style.css
+++ b/tgi/css/style.css
@@ -91,7 +91,8 @@ body {
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */ }
 
 .title {
-  background: url("../img/title-bg.png") no-repeat top; }
+  background: url("../img/title-bg.png") no-repeat top;
+  background-size: cover; }
 
 .title__content {
   height: 746px;
@@ -109,6 +110,14 @@ body {
     .title__content h1 span {
       font-weight: 500;
       font-family: 'Open Sans Regular', sans-serif; }
+
+@media screen and (max-width: 768px) {
+  .title__content {
+    background: none; }
+    .title__content h1 {
+      padding-top: 100px;
+      font-size: 35px;
+      text-align: center; } }
 
 .header {
   background: rgba(0, 0, 0, 0.3); }
@@ -153,6 +162,11 @@ body {
   .main-nav ul {
     font-size: 14px; } }
 
+@media screen and (max-width: 768px) {
+  .main-nav ul {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; } }
+
 .button {
   padding: 10px 20px;
   color: #fff;
@@ -193,6 +207,31 @@ body {
       background: url("../img/button-broker.png") no-repeat 50px 8px; }
       .button--broker-contact:hover {
         background: #00c5ff url("../img/button-broker.png") no-repeat 50px 8px; }
+
+@media screen and (max-width: 768px) {
+  .button {
+    text-align: center; }
+    .button--partner, .button--broker {
+      display: block;
+      width: 190px;
+      margin: auto; }
+    .button--partner {
+      margin-bottom: 20px; }
+      .button--partner-contact {
+        width: 190px;
+        padding-left: 60px;
+        background: url("../img/button-partner.png") no-repeat 20px 10px; }
+        .button--partner-contact:hover {
+          background: #00c5ff url("../img/button-partner.png") no-repeat 20px 10px; }
+    .button--broker {
+      padding-left: 60px; }
+      .button--broker-contact {
+        width: 190px;
+        margin-bottom: 20px;
+        padding-left: 60px;
+        background: url("../img/button-broker.png") no-repeat 15px 8px; }
+        .button--broker-contact:hover {
+          background: #00c5ff url("../img/button-broker.png") no-repeat 15px 8px; } }
 
 .edge {
   background: url("../img/edge-bg.png"); }
@@ -245,8 +284,36 @@ body {
 .edge__title-light {
   color: #0488a9; }
 
+@media screen and (max-width: 768px) {
+  .edge {
+    margin-top: -50px; }
+    .edge h1 {
+      font-size: 35px; }
+  .edge__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .edge__box {
+    width: 300px;
+    margin: auto;
+    text-align: center; }
+    .edge__box--1 {
+      background: url("../img/edge-1.png") no-repeat top; }
+    .edge__box--2 {
+      background: url("../img/edge-2.png") no-repeat top; }
+    .edge__box--3 {
+      background: url("../img/edge-3.png") no-repeat top; }
+    .edge__box--4 {
+      background: url("../img/edge-4.png") no-repeat top; }
+    .edge__box--5 {
+      background: url("../img/edge-5.png") no-repeat top; }
+    .edge__box--6 {
+      background: url("../img/edge-6.png") no-repeat top; } }
+
 .map {
-  background: url("../img/map-bg.png") no-repeat top; }
+  background: url("../img/map-bg.png") no-repeat top;
+  background-size: cover; }
   .map h1 {
     margin-top: 0;
     padding-top: 150px;
@@ -261,6 +328,12 @@ body {
     max-width: 100%;
     margin: auto;
     padding-bottom: 280px; }
+
+@media screen and (max-width: 768px) {
+  .map h1 {
+    font-size: 35px; }
+  .map img {
+    padding-bottom: 150px; } }
 
 .contact {
   margin-top: -130px;
@@ -287,6 +360,14 @@ body {
   .contact__title {
     width: auto;
     background: none; } }
+
+@media screen and (max-width: 768px) {
+  .contact {
+    padding-bottom: 150px; }
+  .contact__title {
+    padding: 0;
+    font-size: 32px;
+    text-align: center; } }
 
 .form {
   width: 1050px;
@@ -388,10 +469,20 @@ textarea {
     width: auto;
     margin-top: 60px; } }
 
+@media screen and (max-width: 768px) {
+  .form {
+    padding: 50px 20px; }
+    .form h1 {
+      font-size: 35px;
+      text-align: center; }
+    .form p {
+      text-align: center; } }
+
 .footer {
   position: relative;
   margin-top: -97px;
-  background: url("../img/footer-bg.png") no-repeat top; }
+  background: url("../img/footer-bg.png") no-repeat top;
+  background-size: cover; }
   .footer img {
     padding-top: 80px; }
   .footer p {
@@ -421,3 +512,7 @@ textarea {
       width: auto; }
     .footer::before {
       display: none; } }
+
+@media screen and (max-width: 768px) {
+  .footer {
+    background-size: cover; } }
