--- a/tgi/sass/blocks/contact.scss
+++ b/tgi/sass/blocks/contact.scss
@@ -31,5 +31,13 @@
 }
 
 @media screen and ($mobile-widths) {
-
+  .contact {
+    padding-bottom: 150px;
+  }
+  
+  .contact__title {
+    padding: 0;
+    font-size: 32px;
+    text-align: center;
+  }
 }
