--- a/tgi/sass/blocks/form.scss
+++ b/tgi/sass/blocks/form.scss
@@ -100,5 +100,16 @@ textarea {
 }
 
 @media screen and ($mobile-widths) {
-
+  .form {
+    padding: 50px 20px;
+    
+    h1 {
+      font-size: 35px;
+      text-align: center;
+    }
+    
+    p {
+      text-align: center;
+    }
+  }
 }
