--- a/tgi/sass/blocks/map.scss
+++ b/tgi/sass/blocks/map.scss
@@ -1,6 +1,6 @@
 .map {
-  
   background: url('../img/map-bg.png') no-repeat top;
+  background-size: cover;
   
   h1 {
     margin-top: 0;
@@ -18,5 +18,20 @@
     max-width: 100%;
     margin: auto;
     padding-bottom: 280px;
+  }
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .map {
+    
+    h1 {
+      font-size: 35px;
+    }
+    
+    img {
+      padding-bottom: 150px;
+    }
   }
 }
