--- a/tgi/sass/blocks/title.scss
+++ b/tgi/sass/blocks/title.scss
@@ -1,5 +1,6 @@
 .title {
   background: url('../img/title-bg.png') no-repeat top;
+  background-size: cover;
 }
 
 .title__content {
@@ -20,6 +21,20 @@
     span {
       font-weight: 500;
       font-family: 'Open Sans Regular', sans-serif;
+    }
+  }
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .title__content {
+    background: none;
+    
+    h1 {
+      padding-top: 100px;
+      font-size: 35px;
+      text-align: center;
     }
   }
 }
