--- a/mm-lp/css/style.css
+++ b/mm-lp/css/style.css
@@ -133,7 +133,8 @@ body {
   font-style: italic; }
 
 .header {
-  background: #c4c4c4; }
+  background: #e1e1e1;
+  opacity: 0.8; }
 
 .header__flex {
   display: -webkit-box;
@@ -175,7 +176,7 @@ body {
     background-size: 18px; }
 
 .table {
-  padding-top: 30px;
+  padding: 30px 0;
   background: #ebebeb; }
 
 .table__content {
@@ -189,14 +190,14 @@ body {
     content: 'Limitted time offer';
     position: absolute;
     top: 35px;
-    left: -15px;
+    left: -16px;
     width: 287px;
     height: 72px;
     color: #fff;
     font-size: 25px;
     font-family: 'SF UI Display Black', sans-serif;
     line-height: 75px;
-    background: url("../img/ribbon.svg"); }
+    background: url("../img/ribbon.svg") no-repeat; }
   .table__content b {
     display: block;
     margin-bottom: 40px;
@@ -233,4 +234,37 @@ body {
   .table__content img {
     display: block;
     margin: auto;
-    margin-top: 65px; }
+    margin-top: 65px;
+    padding-bottom: 70px; }
+
+.edge {
+  background: url("../img/edge-bg.png") no-repeat;
+  background-size: cover;
+  background-attachment: fixed; }
+
+.edge__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 80px 0; }
+
+.edge__box {
+  width: 180px;
+  padding-top: 150px;
+  color: #fff;
+  text-align: center;
+  background: url("../img/edge.png") no-repeat top; }
+  .edge__box b {
+    font-size: 30px;
+    font-family: 'SF UI Display', sans-serif; }
+  .edge__box p {
+    margin-bottom: 5px;
+    font-size: 18px;
+    font-family: 'SF UI Display', sans-serif; }
+  .edge__box small {
+    font-size: 15px;
+    font-family: 'SF UI Display', sans-serif;
+    opacity: 0.5; }
