--- a/mm-lp/sass/blocks/table.scss
+++ b/mm-lp/sass/blocks/table.scss
@@ -1,5 +1,5 @@
 .table {
-  padding-top: 30px;
+  padding: 30px 0;
   background: #ebebeb;
 }
 
@@ -14,14 +14,14 @@
     content: 'Limitted time offer';
     position: absolute;
     top: 35px;
-    left: -15px;
+    left: -16px;
     width: 287px;
     height: 72px;
     color: #fff;
     font-size: 25px;
     font-family: 'SF UI Display Black', sans-serif;
     line-height: 75px;
-    background: url('../img/ribbon.svg');
+    background: url('../img/ribbon.svg') no-repeat;
   }
   
   b {
@@ -73,6 +73,7 @@
     display: block;
     margin: auto;
     margin-top: 65px;
+    padding-bottom: 70px;
   }
 }
 
