--- a/mm-lp/sass/global/base.scss
+++ b/mm-lp/sass/global/base.scss
@@ -7,3 +7,11 @@ body {
   width: 1170px;
   margin: auto;
 }
+
+@media screen and ($tablet-widths) {
+  .container {
+    width: 95%;
+  }
+}
+
+@media screen and ($mobile-widths) {}
