--- a/mm-lp/css/style.css
+++ b/mm-lp/css/style.css
@@ -6,6 +6,10 @@ body {
   width: 1170px;
   margin: auto; }
 
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 95%; } }
+
 @font-face {
   font-family: 'SF UI Text';
   src: local("SF UI Text Heavy Italic"), local("SFUIText-HeavyItalic"), url("../fonts/SFUIText-HeavyItalic.woff") format("woff");
@@ -153,6 +157,110 @@ body {
   -ms-flex-align: center;
   align-items: center; }
 
+.nav__toggle {
+  display: none; }
+
+@media screen and (max-width: 768px) {
+  .nav__toggle {
+    display: block;
+    position: absolute;
+    right: 15px;
+    width: 55px;
+    height: 50px;
+    font-size: 0;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+  .nav__item {
+    margin-bottom: 10px; }
+  .nav--closed .nav__toggle::before {
+    content: "";
+    position: absolute;
+    top: 14px;
+    left: 11px;
+    width: 30px;
+    height: 2px;
+    background-color: #009f3c;
+    -webkit-box-shadow: 0 8px 00 #009f3c, 0 16px 00 #009f3c;
+    box-shadow: 0 8px 00 #009f3c, 0 16px 00 #009f3c;
+    -webkit-transition: background-color 0.3s;
+    transition: background-color 0.3s; }
+  .nav--closed .nav__toggle:active::before {
+    background-color: rgba(255, 255, 255, 0.3);
+    -webkit-box-shadow: 0 8px 0 rgba(255, 255, 255, 0.3), 0 16px 0 rgba(255, 255, 255, 0.3);
+    box-shadow: 0 8px 0 rgba(255, 255, 255, 0.3), 0 16px 0 rgba(255, 255, 255, 0.3); }
+  .nav--opened .nav__toggle {
+    z-index: 10; }
+    .nav--opened .nav__toggle::before, .nav--opened .nav__toggle::after {
+      content: "";
+      position: absolute;
+      top: 23px;
+      left: 14px;
+      width: 25px;
+      height: 2px;
+      background-color: #009f3c;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      -webkit-transition: background-color 0.5s;
+      transition: background-color 0.5s; }
+    .nav--opened .nav__toggle::before {
+      -webkit-transform: rotate(45deg);
+      transform: rotate(45deg); }
+    .nav--opened .nav__toggle::after {
+      -webkit-transform: rotate(-45deg);
+      transform: rotate(-45deg); }
+    .nav--opened .nav__toggle:active::before, .nav--opened .nav__toggle:active::after {
+      background-color: rgba(255, 255, 255, 0.3); }
+  .nav--closed .nav__item {
+    display: none; }
+    .nav--closed .nav__item--active {
+      display: block;
+      text-align: center; }
+  .nav--opened .nav__container {
+    position: absolute;
+    top: 7px;
+    right: 0;
+    left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 90%;
+    margin: auto;
+    padding: 10px;
+    background-color: white;
+    -webkit-animation: menu-opened 0.5s;
+    animation: menu-opened 0.5s; }
+  .nav--nojs .nav__toggle {
+    display: none; }
+  .nav--nojs .container {
+    position: static;
+    height: auto; }
+  .nav--nojs .nav__item {
+    display: block; }
+  @-webkit-keyframes menu-opened {
+    0% {
+      -webkit-transform: translateX(100%);
+      transform: translateX(100%); }
+    100% {
+      -webkit-transform: translateX(0%);
+      transform: translateX(0%); } }
+  @keyframes menu-opened {
+    0% {
+      -webkit-transform: translateX(100%);
+      transform: translateX(100%); }
+    100% {
+      -webkit-transform: translateX(0%);
+      transform: translateX(0%); } } }
+
 .button {
   padding: 10px 25px;
   font-size: 12px;
@@ -174,6 +282,14 @@ body {
     font-size: 14px;
     background: url("../img/phone.svg") no-repeat left;
     background-size: 18px; }
+
+@media screen and (max-width: 768px) {
+  .button--green {
+    margin-right: 0; }
+  .button--black {
+    margin-right: 0; }
+  .button--tel {
+    margin-bottom: 0; } }
 
 .table {
   padding: 30px 0;
@@ -205,6 +321,8 @@ body {
     font-weight: bold;
     font-family: 'SF UI Display', sans-serif; }
   .table__content p {
+    width: 710px;
+    margin: auto;
     margin-top: 0;
     margin-bottom: 75px;
     font-size: 25px;
@@ -237,6 +355,28 @@ body {
     margin-top: 65px;
     padding-bottom: 70px; }
 
+.table__img-s {
+  display: none; }
+
+@media screen and (max-width: 1200px) {
+  .table__content {
+    padding-top: 150px; }
+    .table__content p {
+      width: auto; } }
+
+@media screen and (max-width: 768px) {
+  .table {
+    padding-top: 90px; }
+  .table__content b {
+    font-size: 50px; }
+  .table__content p {
+    font-size: 20px; }
+  .table__content a {
+    padding: 15px 40px;
+    font-size: 18px; }
+  .table__content img {
+    width: 95%; } }
+
 .edge {
   background: url("../img/edge-bg.png") no-repeat;
   background-size: cover;
@@ -268,3 +408,16 @@ body {
     font-size: 15px;
     font-family: 'SF UI Display', sans-serif;
     opacity: 0.5; }
+
+@media screen and (max-width: 768px) {
+  .edge__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding-bottom: 30px; }
+  .edge__box {
+    margin-bottom: 50px; } }
