--- a/mm-lp/sass/blocks/edge.scss
+++ b/mm-lp/sass/blocks/edge.scss
@@ -34,3 +34,17 @@
     opacity: 0.5;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .edge__flex {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 30px;
+  }
+  
+  .edge__box {
+    margin-bottom: 50px;
+  }
+}
