--- a/mm-lp/sass/blocks/header.scss
+++ b/mm-lp/sass/blocks/header.scss
@@ -8,3 +8,7 @@
   justify-content: space-between;
   padding: 12px 0;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {}
