--- a/mm-lp/sass/blocks/nav.scss
+++ b/mm-lp/sass/blocks/nav.scss
@@ -2,3 +2,148 @@
   display: flex;
   align-items: center;
 }
+
+.nav__toggle {
+  display: none;
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .nav__toggle {
+    display: block;
+    position: absolute;
+    right: 15px;
+    width: 55px;
+    height: 50px;
+    font-size: 0;
+    border: none;
+    // border: 2px solid #009f3c;
+    background: transparent;
+    cursor: pointer;
+    transition: 0.3s;
+    
+      &:hover {
+        // background-color: #1b85c7;
+      }
+    }
+  
+  .nav__item {
+    margin-bottom: 10px;
+  }
+  
+  .nav--closed {
+    .nav__toggle {
+      &::before {
+        content: "";
+        position: absolute;
+        top: 14px;
+        left: 11px;
+        width: 30px;
+        height: 2px;
+        background-color: #009f3c;
+        box-shadow:
+          0 8px 00 #009f3c,
+          0 16px 00 #009f3c;
+        transition: background-color 0.3s;
+      }
+      
+      &:active::before {
+        background-color: rgba(255, 255, 255, 0.3);
+        box-shadow:
+          0 8px 00 rgba(255, 255, 255, 0.3),
+          0 16px 00 rgba(255, 255, 255, 0.3);
+      }
+    }
+  }
+  
+  .nav--opened {
+    .nav__toggle {
+      // top: 10px;
+      // right: 20px;
+      // width: 40px;
+      // height: 40px;
+      z-index: 10;
+      
+        &::before,
+        &::after {
+          content: "";
+          position: absolute;
+          top: 23px;
+          left: 14px;
+          width: 25px;
+          height: 2px;
+          background-color: #009f3c;
+          box-shadow: none;
+          transition: background-color 0.5s;
+        }
+        
+        &::before {
+          transform: rotate(45deg);
+        }
+        
+        &::after {
+          transform: rotate(-45deg);
+        }
+        
+        &:active::before,
+        &:active::after {
+          background-color: rgba(255, 255, 255, 0.3);
+        }
+      }
+    }
+  
+  .nav--closed {
+    .nav__item {
+      display: none;
+      
+      &--active {
+        display: block;
+        text-align: center;
+      }
+    }
+  }
+  
+  .nav--opened {
+    .nav__container {
+      position: absolute;
+      top: 7px;
+      right: 0;
+      left: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 90%;
+      
+      margin: auto;
+      padding: 10px;
+      background-color: white;
+      // z-index: 50;
+      animation: menu-opened 0.5s;
+    }
+  }
+  
+  .nav--nojs {
+    .nav__toggle {
+      display: none;
+    }
+    
+    .container {
+      position: static;
+      height: auto;
+    }
+    
+    .nav__item {
+      display: block;
+      
+        &--active {
+          // text-align: left;
+        }
+    }
+  }
+  
+  @keyframes menu-opened {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(0%); }
+  }
+}
