--- a/mm-lp/sass/blocks/table.scss
+++ b/mm-lp/sass/blocks/table.scss
@@ -1,6 +1,8 @@
 .table {
+  // position: relative;
   padding: 30px 0;
   background: #ebebeb;
+  // z-index: 5;
 }
 
 .table__content {
@@ -33,6 +35,8 @@
   }
   
   p {
+    width: 710px;
+    margin: auto;
     margin-top: 0;
     margin-bottom: 75px;
     font-size: 25px;
@@ -77,4 +81,42 @@
   }
 }
 
+.table__img-s {
+  display: none;
+}
 
+@media screen and ($tablet-widths) {
+  .table__content {
+    padding-top: 150px;
+    
+    p {
+      width: auto;
+    }
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .table {
+    padding-top: 90px;
+  }
+
+  .table__content {
+    
+    b {
+      font-size: 50px;
+    }
+    
+    p {
+      font-size: 20px;
+    }
+    
+    a {
+      padding: 15px 40px;
+      font-size: 18px;
+    }
+    
+    img {
+      width: 95%;
+    }
+  }
+}
