--- a/mm-lp/sass/blocks/table.scss
+++ b/mm-lp/sass/blocks/table.scss
@@ -103,10 +103,12 @@
   .table__content {
     
     b {
+      padding: 0 20px;
       font-size: 50px;
     }
     
     p {
+      padding: 0 20px;
       font-size: 20px;
     }
     
