--- a/mm-lp/css/style.css
+++ b/mm-lp/css/style.css
@@ -170,7 +170,7 @@ body {
     font-size: 0;
     border: none;
     background: transparent;
-    cursor: pointer;
+    outline: none;
     -webkit-transition: 0.3s;
     transition: 0.3s; }
   .nav__item {
@@ -178,8 +178,8 @@ body {
   .nav--closed .nav__toggle::before {
     content: "";
     position: absolute;
-    top: 14px;
-    left: 11px;
+    top: 15px;
+    left: 13px;
     width: 30px;
     height: 2px;
     background-color: #009f3c;
@@ -197,7 +197,7 @@ body {
       content: "";
       position: absolute;
       top: 23px;
-      left: 14px;
+      left: 15px;
       width: 25px;
       height: 2px;
       background-color: #009f3c;
@@ -368,8 +368,10 @@ body {
   .table {
     padding-top: 90px; }
   .table__content b {
+    padding: 0 20px;
     font-size: 50px; }
   .table__content p {
+    padding: 0 20px;
     font-size: 20px; }
   .table__content a {
     padding: 15px 40px;
@@ -452,6 +454,10 @@ body {
 .terms ol {
   font-size: 16px;
   font-family: 'SF UI Display Light', sans-serif; }
+
+@media screen and (max-width: 768px) {
+  .terms p {
+    padding: 35px 20px; } }
 
 .footer {
   padding: 25px 0;
