--- a/mm-lp/sass/blocks/nav.scss
+++ b/mm-lp/sass/blocks/nav.scss
@@ -18,9 +18,8 @@
     height: 50px;
     font-size: 0;
     border: none;
-    // border: 2px solid #009f3c;
     background: transparent;
-    cursor: pointer;
+    outline: none;
     transition: 0.3s;
     
       &:hover {
@@ -37,8 +36,8 @@
       &::before {
         content: "";
         position: absolute;
-        top: 14px;
-        left: 11px;
+        top: 15px;
+        left: 13px;
         width: 30px;
         height: 2px;
         background-color: #009f3c;
@@ -70,7 +69,7 @@
           content: "";
           position: absolute;
           top: 23px;
-          left: 14px;
+          left: 15px;
           width: 25px;
           height: 2px;
           background-color: #009f3c;
