--- a/mm-lp/sass/blocks/terms.scss
+++ b/mm-lp/sass/blocks/terms.scss
@@ -37,3 +37,14 @@
     font-family: 'SF UI Display Light', sans-serif;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .terms {
+    
+    p {
+      padding: 35px 20px;
+    }
+  }
+}
