--- a/mm-lp/css/style.css
+++ b/mm-lp/css/style.css
@@ -465,7 +465,7 @@ body {
   .footer h1 {
     color: #fff;
     font-size: 25px;
-    font-family: 'SF UI Display Heavy', sans-serif;
+    font-family: 'SF UI Display Black', sans-serif;
     text-align: center;
     text-transform: uppercase; }
   .footer p {
