--- a/mm-lp/sass/blocks/footer.scss
+++ b/mm-lp/sass/blocks/footer.scss
@@ -5,7 +5,7 @@
   h1 {
     color: #fff;
     font-size: 25px;
-    font-family: 'SF UI Display Heavy', sans-serif;
+    font-family: 'SF UI Display Black', sans-serif;
     text-align: center;
     text-transform: uppercase;
   }
