--- a/mm-lp/css/style.css
+++ b/mm-lp/css/style.css
@@ -394,22 +394,27 @@ body {
   padding: 80px 0; }
 
 .edge__box {
-  width: 180px;
-  padding-top: 150px;
+  width: 200px;
+  padding-top: 180px;
   color: #fff;
-  text-align: center;
-  background: url("../img/edge.png") no-repeat top; }
-  .edge__box b {
-    font-size: 30px;
-    font-family: 'SF UI Display', sans-serif; }
+  text-align: center; }
   .edge__box p {
     margin-bottom: 5px;
     font-size: 18px;
-    font-family: 'SF UI Display', sans-serif; }
-  .edge__box small {
-    font-size: 15px;
     font-family: 'SF UI Display', sans-serif;
-    opacity: 0.5; }
+    text-transform: uppercase; }
+
+.edge__box--1 {
+  background: url("../img/edge-1.svg") no-repeat top; }
+
+.edge__box--2 {
+  background: url("../img/edge-2.svg") no-repeat top; }
+
+.edge__box--3 {
+  background: url("../img/edge-3.svg") no-repeat top; }
+
+.edge__box--4 {
+  background: url("../img/edge-4.svg") no-repeat top; }
 
 @media screen and (max-width: 768px) {
   .edge__flex {
