--- a/mm-lp/sass/blocks/edge.scss
+++ b/mm-lp/sass/blocks/edge.scss
@@ -11,28 +11,33 @@
 }
 
 .edge__box {
-  width: 180px;
-  padding-top: 150px;
+  width: 200px;
+  padding-top: 180px;
   color: #fff;
   text-align: center;
-  background: url('../img/edge.png') no-repeat top;
-  
-  b {
-    font-size: 30px;
-    font-family: 'SF UI Display', sans-serif;
-  }
   
   p {
     margin-bottom: 5px;
     font-size: 18px;
     font-family: 'SF UI Display', sans-serif;
+    text-transform: uppercase;
   }
-  
-  small {
-    font-size: 15px;
-    font-family: 'SF UI Display', sans-serif;
-    opacity: 0.5;
-  }
+}
+
+.edge__box--1 {
+  background: url('../img/edge-1.svg') no-repeat top;
+}
+
+.edge__box--2 {
+  background: url('../img/edge-2.svg') no-repeat top;
+}
+
+.edge__box--3 {
+  background: url('../img/edge-3.svg') no-repeat top;
+}
+
+.edge__box--4 {
+  background: url('../img/edge-4.svg') no-repeat top;
 }
 
 @media screen and ($tablet-widths) {}
