--- a/mm-lp/css/style.css
+++ b/mm-lp/css/style.css
@@ -137,8 +137,7 @@ body {
   font-style: italic; }
 
 .header {
-  background: #e1e1e1;
-  opacity: 0.8; }
+  background: rgba(225, 225, 225, 0.8); }
 
 .header__flex {
   display: -webkit-box;
