--- a/tgi/js/slick/slick-theme.css
+++ b/tgi/js/slick/slick-theme.css
@@ -122,31 +122,46 @@
 .slick-dots
 {
     position: absolute;
-    bottom: -25px;
+    top: 300px;
+    right: 100px;
 
-    display: block;
-
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+    
     width: 100%;
+    height: 450px;
     padding: 0;
     margin: 0;
 
     list-style: none;
 
-    text-align: center;
+    /* text-align: right; */
 }
+
 .slick-dots li
 {
     position: relative;
 
     display: inline-block;
 
-    width: 20px;
-    height: 20px;
+    /* width: 20px; */
+    /* height: 20px; */
     margin: 0 5px;
     padding: 0;
+    padding-left: 30px;
+    
+    color: #fff;
+    font-size: 25px;
+    font-family: 'Open Sans', sans-serif;
+
+    background: url('../../img/slider-dots.png') no-repeat left;
 
     cursor: pointer;
+    transition: 0.2s;
 }
+
 .slick-dots li button
 {
     font-size: 0;
@@ -177,9 +192,9 @@
 }
 .slick-dots li button:before
 {
-    font-family: 'slick';
-    font-size: 6px;
-    line-height: 20px;
+    /* font-family: 'slick'; */
+    /* font-size: 6px; */
+    /* line-height: 20px; */
 
     position: absolute;
     top: 0;
@@ -188,11 +203,12 @@
     width: 20px;
     height: 20px;
 
-    content: '•';
+    /* content: '•'; */
     text-align: center;
 
     opacity: .25;
     color: black;
+
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -201,4 +217,10 @@
 {
     opacity: .75;
     color: black;
+}
+
+.slick-dots li.slick-active {
+  padding-left: 40px;
+  color: #becad6;
+  background: url('../../img/slider-dots-h.png') no-repeat left;
 }
