--- a/tgi/sass/blocks/map.scss
+++ b/tgi/sass/blocks/map.scss
@@ -1,4 +1,5 @@
 .map {
+  margin-top: -130px;
   background: url('../img/map-bg.png') no-repeat top;
   background-size: cover;
   
@@ -21,7 +22,11 @@
   }
 }
 
-@media screen and ($tablet-widths) {}
+@media screen and ($tablet-widths) {
+  .map {
+    margin-top: 0;
+  }
+}
 
 @media screen and ($mobile-widths) {
   .map {
